--- a/han/model/insurance_app/templates/insurance_app/weekly.html
+++ b/han/model/insurance_app/templates/insurance_app/weekly.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>자동차 주간 보험정보</title>
+    <title>자동차 보험 상식</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-light">
 <div class="container py-4">
-    <h1 class="mb-4">자동차 주간 보험정보</h1>
+    <h1 class="mb-4">자동차 보험 상식</h1>
     <div class="accordion" id="weeklyAccordion">
         {% for a in articles %}
         <div class="accordion-item">
